# isaac_ros_cumotion

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG  LICENSE  README.md
curobo_core/: package.xml  setup.cfg  setup.py
curobo_core/test/: test_copyright.py
isaac_ros_cumotion/: package.xml  setup.cfg  setup.py
isaac_ros_cumotion/isaac_ros_cumotion/: __init__.py  cumotion_goal_set_client.py  cumotion_goal_set_planner.py  cumotion_planner.py  robot_segmenter.py  static_planning_scene.py  update_kinematics.py  util.py  xrdf_utils.py
isaac_ros_cumotion/launch/: isaac_ros_cumotion.launch.py  robot_segmentation.launch.py
isaac_ros_cumotion/params/: isaac_ros_cumotion_params.yaml  robot_segmentation_params.yaml
isaac_ros_cumotion/test/: download_rosbag.sh
isaac_ros_cumotion_examples/: package.xml  setup.py
isaac_ros_cumotion_examples/isaac_sim_scripts/: start_isaac_sim_franka.py
isaac_ros_cumotion_examples/launch/: franka.launch.py  franka_isaac_sim.launch.py  ur.launch.py  ur_isaac_sim.launch.py
isaac_ros_cumotion_examples/rviz/: franka_moveit_config.rviz  ur_moveit_config.rviz
isaac_ros_cumotion_examples/test/: test_copyright.py
isaac_ros_cumotion_examples/ur_config/: initial_positions.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.urdf.xacro  ur_sim.urdf.xacro
isaac_ros_cumotion_interfaces/: CMakeLists.txt  package.xml
isaac_ros_cumotion_interfaces/action/: AttachObject.action  IKSolution.action  MotionPlan.action  UpdateLinkSpheres.action
isaac_ros_cumotion_interfaces/srv/: PublishStaticPlanningScene.srv
isaac_ros_cumotion_moveit/: CMakeLists.txt  cumotion_planner_plugin_description.xml  package.xml
isaac_ros_cumotion_moveit/config/: isaac_ros_cumotion_planning.yaml
isaac_ros_cumotion_moveit/include/isaac_ros_cumotion_moveit/: cumotion_interface.hpp  cumotion_move_group_client.hpp  cumotion_planner_manager.hpp  cumotion_planning_context.hpp
isaac_ros_cumotion_moveit/src/: cumotion_interface.cpp  cumotion_move_group_client.cpp  cumotion_planner_manager.cpp  cumotion_planning_context.cpp
isaac_ros_cumotion_object_attachment/: package.xml  setup.cfg  setup.py
isaac_ros_cumotion_object_attachment/isaac_ros_cumotion_object_attachment/: attach_object_client.py  attach_object_server.py
isaac_ros_cumotion_object_attachment/launch/: cumotion_bringup.launch.py  object_attachment.launch.py
isaac_ros_cumotion_object_attachment/params/: object_attachment_params.yaml
isaac_ros_cumotion_python_utils/: package.xml  setup.cfg  setup.py
isaac_ros_cumotion_python_utils/isaac_ros_cumotion_python_utils/: moveit_scene_file_parser.py  utils.py
isaac_ros_cumotion_python_utils/test/: test_moveit_scene_file_parser.py
isaac_ros_cumotion_robot_description/: package.xml  setup.py
isaac_ros_cumotion_robot_description/urdf/: sns.urdf  ur10e_robotiq_2f_140.urdf  ur10e_robotiq_2f_85.urdf  ur5e_robotiq_2f_140.urdf  ur5e_robotiq_2f_85.urdf
isaac_ros_cumotion_robot_description/xrdf/: franka.xrdf  sns.xrdf  ur10e.xrdf  ur10e_robotiq_2f_140.xrdf  ur10e_robotiq_2f_85.xrdf  ur5e.xrdf  ur5e_robotiq_2f_140.xrdf  ur5e_robotiq_2f_85.xrdf
isaac_ros_esdf_visualizer/: package.xml  setup.cfg  setup.py
isaac_ros_esdf_visualizer/isaac_ros_esdf_visualizer/: esdf_visualizer.py
isaac_ros_goal_setter_interfaces/: CMakeLists.txt  package.xml
isaac_ros_goal_setter_interfaces/srv/: SetTargetPose.srv
isaac_ros_moveit_goal_setter/: CMakeLists.txt  package.xml  setup.cfg  setup.py
isaac_ros_moveit_goal_setter/include/isaac_ros_moveit_goal_setter/: goal_setter_node.hpp
isaac_ros_moveit_goal_setter/isaac_ros_moveit_goal_setter/: goal_initializer.py  move_group_client.py  pose_to_pose.py
isaac_ros_moveit_goal_setter/launch/: isaac_ros_goal_setter.launch.py
isaac_ros_moveit_goal_setter/scripts/: pose_to_pose.py
isaac_ros_moveit_goal_setter/src/: goal_setter_node.cpp
