<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_cumotion</name>
  <version>3.2.5</version>
  <description>Package adds a cuMotion planner node</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Balakumar Sundaralingam</author>

  <depend>message_filters</depend>
  <depend>moveit_msgs</depend>
  <depend>nvblox_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>isaac_ros_cumotion_interfaces</build_depend>

  <exec_depend>curobo_core</exec_depend>
  <exec_depend>isaac_ros_common</exec_depend>
  <exec_depend>isaac_ros_cumotion_interfaces</exec_depend>
  <exec_depend>isaac_ros_cumotion_python_utils</exec_depend>
  <exec_depend>isaac_ros_cumotion_robot_description</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
