<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_cumotion_examples</name>
  <version>3.2.5</version>
  <description>Examples demonstrating Isaac ROS cuMotion with MoveIt</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <build_depend>isaac_ros_common</build_depend>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>

  <exec_depend>isaac_ros_cumotion_moveit</exec_depend>
  <exec_depend>moveit2_tutorials</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
