<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_cumotion_moveit</name>
  <version>3.2.5</version>
  <description>Package adds a cuMotion planner plugin to MoveIt</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Balakumar Sundaralingam</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>isaac_ros_common</build_depend>

  <depend>isaac_ros_cumotion</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
