<?xml version="1.0"?>

<!--
 SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.

 SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_cumotion_object_attachment</name>
  <version>3.2.5</version>
  <description>Package attaches/detaches a grasped object to robot's collision geometry</description>
  
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Animesh Singhal</author>

  <depend>curobo_core</depend>
  <depend>isaac_ros_cumotion</depend>
  <depend>isaac_ros_cumotion_interfaces</depend>
  <depend>isaac_manipulator_ros_python_utils</depend>
  <depend>isaac_ros_cumotion_robot_description</depend>
  <depend>isaac_ros_launch_utils</depend>
  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>action_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>isaac_ros_common</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
